@@ -4,5 +4,6 @@ public enum FunctionalPrivilege {
     FN_PRV_EDIT_PRIVILEGES,
     FN_PRV_EDIT_COMPANIES,
     FN_PRV_INVALIDATE_COMPANIES,
-    FN_PRV_CREATE_INFORMATION
+    FN_PRV_CREATE_INFORMATION,
+    FN_PRV_INVALIDATE_RECRUITMENT_INFO
 }
